# Project_Thor

./: README.md
Assignment1/: a.out  main.cpp
Project1/: CMakeLists.txt  HelloappBinary  main.cpp
Project1_multifiles/: CMakeLists.txt  HelloappBinary  main.cpp
Project1_multifiles/Include/: dog.h
Project1_multifiles/SourceProject/: dog.cpp
Project_Pratice/EmployeManagement/: CMakeLists.txt  EmpBinary  main.cpp
Project_Pratice/EmployeManagement/Include/: EmpManager.h  Employee.h
Project_Pratice/EmployeManagement/SourceProject/: EmpManager.cpp  Employee.cpp
